--- a/Templates/index.html
+++ b/Templates/index.html
@@ -77,7 +77,9 @@
 								<div class="group-by-button-col">
 									<a href="#" class="group-by-button">Месячный</a>
 								</div>
-								<div class="top3-wrapper">
+								<div class="top3-placeholder">
+									<div class="top3-wrapper"></div>
+									<div class="top3-stand"></div>
 								</div>
 								<div class="list-view">
 									<div class="list-item">
