--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!-- DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd" -->
+<!-- DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd" -->
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -77,32 +79,35 @@
 								<div class="group-by-button-col">
 									<a href="#" class="group-by-button">Месячный</a>
 								</div>
-								<div class="top3-placeholder">
-									<div class="top3-wrapper"></div>
-									<div class="top3-stand"></div>
+							</div>
+							<div class="top3-placeholder">
+								<div class="top3-row">
+									<div class="top3-col" id="top-3-2nd"></div>
+									<div class="top3-col" id="top-3-1st"></div>
+									<div class="top3-col" id="top-3-3rd"></div>
 								</div>
-								<div class="list-view">
-									<div class="list-item">
-										<div class="list-item-field"><span><b>Андреенков Андрей</b></span></div>
-										<div class="list-item-field"><div class="icon"></div></div>
-										<div class="list-item-field"><span class="lt">></span></div>
-										<div class="list-item-field"><span>Quality <b>95</b></span><span>AHT <b>753</b></span></div>
-										<div class="list-item-field rightallign"><span class="large"><b>4</b></span></div>
-									</div>
-									<div class="list-item">
-										<div class="list-item-field"><span><b>Андреенков Андрей</b></span></div>
-										<div class="list-item-field"><div class="icon"></div></div>
-										<div class="list-item-field"><span class="lt">></span></div>
-										<div class="list-item-field"><span>Quality <b>95</b></span><span>AHT <b>753</b></span></div>
-										<div class="list-item-field rightallign"><span class="large"><b>5</b></span></div>
-									</div>
-									<div class="list-item">
-										<div class="list-item-field"><span><b>Андреенков Андрей</b></span></div>
-										<div class="list-item-field"><div class="icon"></div></div>
-										<div class="list-item-field"><span class="lt">></span></div>
-										<div class="list-item-field"><span>Quality <b>95</b></span><span>AHT <b>753</b></span></div>
-										<div class="list-item-field rightallign"><span class="large"><b>6</b></span></div>
-									</div>
+							</div>
+							<div class="list-view">
+								<div class="list-item">
+									<div class="list-item-field"><span><b>Андреенков Андрей</b></span></div>
+									<div class="list-item-field"><div class="icon"></div></div>
+									<div class="list-item-field"><span class="lt">></span></div>
+									<div class="list-item-field"><span>Quality <b>95</b></span><span>AHT <b>753</b></span></div>
+									<div class="list-item-field rightallign"><span class="large"><b>4</b></span></div>
+								</div>
+								<div class="list-item">
+									<div class="list-item-field"><span><b>Андреенков Андрей</b></span></div>
+									<div class="list-item-field"><div class="icon"></div></div>
+									<div class="list-item-field"><span class="lt">></span></div>
+									<div class="list-item-field"><span>Quality <b>95</b></span><span>AHT <b>753</b></span></div>
+									<div class="list-item-field rightallign"><span class="large"><b>5</b></span></div>
+								</div>
+								<div class="list-item">
+									<div class="list-item-field"><span><b>Андреенков Андрей</b></span></div>
+									<div class="list-item-field"><div class="icon"></div></div>
+									<div class="list-item-field"><span class="lt">></span></div>
+									<div class="list-item-field"><span>Quality <b>95</b></span><span>AHT <b>753</b></span></div>
+									<div class="list-item-field rightallign"><span class="large"><b>6</b></span></div>
 								</div>
 							</div>
 						</div>
