--- a/Templates/main.css
+++ b/Templates/main.css
@@ -330,11 +330,36 @@ a.group-by-button{
 	font-weight:bold;
 }
 
-.top3-wrapper{
-	height:240px;
+.top3-placeholder{
+	height:320px;
 	background-image: url("img/top3_stand.png");
 	background-position: center bottom;
 	background-repeat:no-repeat;
+}
+
+.top3-row{
+	width:540px;
+	height:240px;
+	margin:auto;
+}
+
+.top3-col{
+	background-color:white;
+	width:180px;
+	height:200px;
+	float:left;	
+}
+
+#top-3-1st{
+	margin-top:0;
+}
+
+#top-3-2nd{
+	margin-top:40px;
+}
+
+#top-3-3rd{
+	margin-top:40px;
 }
 
 .list-view{
