--- a/Templates/index.html
+++ b/Templates/index.html
@@ -82,9 +82,9 @@
 							</div>
 							<div class="top3-placeholder">
 								<div class="top3-row">
-									<div class="top3-col" id="top-3-2nd"></div>
-									<div class="top3-col" id="top-3-1st"></div>
-									<div class="top3-col" id="top-3-3rd"></div>
+									<div class="top3-col" id="top-3-2nd"><div class="top3-photo-frame"><img src=""></img></div></div>
+									<div class="top3-col" id="top-3-1st"><div class="top3-photo-frame"><img src=""></img></div></div>
+									<div class="top3-col" id="top-3-3rd"><div class="top3-photo-frame"><img src=""></img></div></div>
 								</div>
 							</div>
 							<div class="list-view">
